--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ export(MCF7_TNF)
 import(AnnotationHub)
 import(ExperimentHub)
 import(Seurat)
+import(SeuratWrappers)
 import(SingleCellExperiment)
+import(ggplot2)
