--- a/..Rcheck/EMTscoreData/DESCRIPTION
+++ b/..Rcheck/EMTscoreData/DESCRIPTION
@@ -1,29 +1,20 @@
 Package: EMTscoreData
-Title: Single-cell RNA-seq datasets of EMT responses from Cook et al. (2020)
+Title: Single-cell RNA-seq datasets of EMT responses from Cook et al.
+        (2020)
 Version: 0.99.7
 Authors@R: person("Haimei", "Wen", email = "hudie.luoluo@gmail.com", role = c("aut", "cre"))
 Author: Haimei Wen <hudie.luoluo@gmail.com>
 Maintainer: Haimei Wen <hudie.luoluo@gmail.com>
 Description: Provides 12 single-cell RNA-seq datasets profiling epithelial mesenchymal transition (EMT) in human cancer cell lines (MCF7, OVCA420, DU145, A549) under TGF-beta stimulation, kinase inhibition, and time-course conditions, as reported in Cook DP & Vanderhyden BC (2020). Data are available as Seurat objects via ExperimentHub..
 License: GPL-3
-Imports:
-    ExperimentHub,
-    AnnotationHub,
-    SummarizedExperiment,
-    Seurat,
-    SingleCellExperiment,
-    ggplot2
-Suggests:
-    googledrive,
-    BiocStyle,
-    knitr,
-    rmarkdown
+Imports: ExperimentHub, AnnotationHub, SummarizedExperiment, Seurat,
+        SingleCellExperiment, ggplot2
+Suggests: googledrive, BiocStyle, knitr, rmarkdown
 VignetteBuilder: knitr
-biocViews: 
-    ExperimentHub,
-    SingleCellData,
+biocViews: ExperimentHub, SingleCellData,
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
 NeedsCompilation: no
 Packaged: 2024-08-14 05:29:44 UTC; hwen6
+Built: R 4.6.0; ; 2025-12-18 00:41:33 UTC; unix
